trying to fix scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   font-family: sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   display: flex;
   align-items: center;
